# echology

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  run.sh
deploy/: bitcoind.sh  config.sh  echology_srv.sh  echology_ui.sh  electrs.sh  esplora.sh
src/: echo.rs  main.rs  solicitation.rs  wally.rs
static/: index.html
ui/: .env  .env.production  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
ui/app/: Nav.js  layout.js  loading.js  page.js
ui/app/coin-control/: layout.js  loading.js  page.js
ui/app/coin-control/components/: Table.js  TableHead.js  TableRow.js  converter.js
ui/app/components/: CheckboxField.js  SolutionTable.js
ui/app/context/: coins.js
ui/app/spent-scenario/: layout.js  page.js
ui/app/spent-scenario/components/: RecipientsTable.js  SolutionTable.js  Table.js
ui/components/: BitcoinButton.js  CheckboxField.js  Copy.js  ErrorDialog.js  NewSolutionForm.js  PrintMoneyDialog.js  RecipientsTable.js  SelectionDropdown.js  SolutionTable.js  TableHead.js
ui/context/coins/: coinActions.js  coinContext.js
ui/styles/: global.css
ui/utils/: constants.js  request.js  setCookie.js
