[package]
name = "echology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind = { version = "0.32.0" } # 23_0
miniscript = { version = "10.0.0" }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
bdk_chain = { git = "https://github.com/evanlinjin/bdk.git", rev = "b0437d0c8fe2eff240e206160040559f2a8cff93" }
bdk_bitcoind_rpc = { git = "https://github.com/evanlinjin/bdk.git", rev = "b0437d0c8fe2eff240e206160040559f2a8cff93" }
bdk_coin_select = { git = "https://github.com/evanlinjin/bdk.git", rev = "b0437d0c8fe2eff240e206160040559f2a8cff93" }
bdk_tmp_plan = { git = "https://github.com/evanlinjin/bdk.git", rev = "b0437d0c8fe2eff240e206160040559f2a8cff93" }
tide-rustls = "0.3.0"
rand = { version = "0.8" }

[features]
internal_bitcoind = ["bitcoind/25_0"]
